methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var Couleur = blanc
  if (estFaceMur() == true) {
    return false
  };else { 
    avance()
    Couleur = getCouleurSol()
    recule()
    if (Couleur == Color.green) {
      avance()
    }else {
      gauche()
    }
    
    
    
  }
    
}     
